# pgsearch_rs

./: .gitignore  Cargo.toml  README.md  info_format.toml  postgres-notes.md
.cargo/: config.toml
examples/: demo1.rs
src/: dbconn.rs  handle_local_data.rs  lib.rs  main.rs  psql.rs  webserveapi.rs
test/: README.md  insert_to_pg.py  query_from_pg.py
