[package]
name = "pgsearch_rs"
version = "0.1.0"
edition = "2021"

include = ["src"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "demo1"
path = "/root/workspace/Pgsearch-rs/examples/demo1.rs"

[[example]]
name = "demo2"
path = "/root/workspace/Pgsearch-rs/examples/demo2.rs"

[lib]
name = "pgsearch_rs"

[features]
depreciation = []
localdata = []

[dependencies]
jieba-rs = "0.6.6"
tokio-postgres = "0.7.6"
tokio = { version = "1.18.0", features = ["full"] }
anyhow = "*"
axum = "0.5.7"
serde = { version = "1.0.137", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
serde_json = "1.0.81"
toml = "0.5.9"
deadpool-postgres = "0.10.2"
threadpool = "1.8.1"
